CU-qf8rrp - Fixed build